ランキング実装

--- a/www/page1.html
+++ b/www/page1.html
@@ -9,7 +9,7 @@
         </ons-sliding-menu>
     </div>
 
-    <div class="center">おもしろ動画</div>
+    <div class="center">動画</div>
 </ons-toolbar>
 
 <div style="text-align: center">
