--- a/www/home_main.html
+++ b/www/home_main.html
@@ -11,7 +11,7 @@
           <ons-icon icon="ion-navicon" style="font-size: 32px; width: 1em;"></ons-icon>
         </ons-toolbar-button>
       </div>
-      <div class="center">おもしろ動画</div>
+      <div class="center">{{catdata.cat_name}}</div>
     </ons-toolbar>
          
      <!-- 
