--- a/www/page2.html
+++ b/www/page2.html
@@ -9,6 +9,18 @@
         <ons-list>
             <ons-list-item class="item" ng-repeat="data in dataList" ng-click="showDetailPage(data)">
             <ons-row>
+                <ons-col width="20px">
+                    <div>
+                        <img ng-if="$index == 0" src="img/1.png"/>
+                        <img ng-if="$index == 1" src="img/2.png"/>
+                        <img ng-if="$index == 2" src="img/2.png"/>
+                        <div ng-switch = "data.d_id">
+                            <div ng-switch-when="6w2UxDdhZPk">
+                                a
+                            </div>
+                        </div>
+                </div>
+                </ons-col>
                 <ons-col width="80px">
                     <div class="item__thum">
                         <img src="http://i.ytimg.com/vi/{{data.d_id}}/default.jpg" width="70" height="50"/>
