--- a/www/page4.html
+++ b/www/page4.html
@@ -8,7 +8,15 @@
 
         <ons-list>
             <ons-list-item class="item" ng-repeat="data in dataList" ng-click="showDetailPage(data)">
-            <ons-row>
+            <ons-row class="relative">
+                <ons-col width="20px">
+                    <div >
+                        <img ng-if="$index == 0" src="img/1.png"/>
+                        <img ng-if="$index == 1" src="img/2.png"/>
+                        <img ng-if="$index == 2" src="img/2.png"/>
+                        <img ng-if="$index == 2" src="img/new.png" class="absolute"/>
+                    </div>
+                </ons-col>
                 <ons-col width="80px">
                     <div class="item__thum">
                         <img src="http://i.ytimg.com/vi/{{data.d_id}}/default.jpg" width="70" height="50"/>
