--- a/www/page2.html
+++ b/www/page2.html
@@ -8,15 +8,17 @@
 
         <ons-list>
             <ons-list-item class="item" ng-repeat="data in dataList" ng-click="showDetailPage(data)">
-            <ons-row>
-                <ons-col width="20px">
+            <ons-row class="relative">
+                <ons-col width="25px">
                     <div>
-                        <img ng-if="$index == 0" src="img/1.png"/>
-                        <img ng-if="$index == 1" src="img/2.png"/>
-                        <img ng-if="$index == 2" src="img/2.png"/>
+                        <img ng-if="$index == 0" src="img/1.jpg" width="24px"/>
+                        <img ng-if="$index == 1" src="img/2.jpg" width="24px"/>
+                        <img ng-if="$index == 2" src="img/3.jpg" width="24px"/>
+                        <img ng-if="$index == 2" src="img/new.jpg" class="absolute"/>
+                        <img ng-if="$index == 3" src="img/new.jpg" class="absolute"/>
                         <div ng-switch = "data.d_id">
                             <div ng-switch-when="6w2UxDdhZPk">
-                                a
+                                
                             </div>
                         </div>
                 </div>
