--- a/www/page4.html
+++ b/www/page4.html
@@ -9,12 +9,13 @@
         <ons-list>
             <ons-list-item class="item" ng-repeat="data in dataList" ng-click="showDetailPage(data)">
             <ons-row class="relative">
-                <ons-col width="20px">
+                <ons-col width="25px">
                     <div >
-                        <img ng-if="$index == 0" src="img/1.png"/>
-                        <img ng-if="$index == 1" src="img/2.png"/>
-                        <img ng-if="$index == 2" src="img/2.png"/>
-                        <img ng-if="$index == 2" src="img/new.png" class="absolute"/>
+                        <img ng-if="$index == 0" src="img/1.jpg" width="24px"/>
+                        <img ng-if="$index == 1" src="img/2.jpg" width="24px"/>
+                        <img ng-if="$index == 2" src="img/3.jpg" width="24px"/>
+                        <img ng-if="$index == 2" src="img/new.jpg" class="absolute"/>
+                        <img ng-if="$index == 3" src="img/new.jpg" class="absolute"/>
                     </div>
                 </ons-col>
                 <ons-col width="80px">
