--- a/www/page1.html
+++ b/www/page1.html
@@ -15,11 +15,29 @@
 <div style="text-align: center">
 
         <ons-list>
-            <ons-list-item  ng-repeat="data in dataList "  ng-click="showDetailPage(data)">
-            <div class="list__item__left">
-                <img src="http://i.ytimg.com/vi/{{data.d_id}}/default.jpg" width="70" height="50"/>
-            </div>
-                <span class="list__item__subtitle">{{data.name}}</span>
+            <ons-list-item class="item" ng-repeat="data in dataList" ng-click="showDetailPage(data)">
+            <ons-row class="relative">
+                <ons-col width="25px">
+                    <div >
+                        <img ng-if="$index == 0" src="img/1.jpg" width="24px"/>
+                        <img ng-if="$index == 1" src="img/2.jpg" width="24px"/>
+                        <img ng-if="$index == 2" src="img/3.jpg" width="24px"/>
+                    </div>
+                    <div ng-switch = "data.new">
+                        <div ng-switch-when="1">
+                            <img src="img/new.jpg" class="absolute"/>
+                        </div>
+                    </div>
+                </ons-col>
+                <ons-col width="80px">
+                    <div class="item__thum">
+                        <img src="http://i.ytimg.com/vi/{{data.d_id}}/default.jpg" width="70" height="50"/>
+                    </div>
+                </ons-col>
+                <ons-col>
+                    <span class="list__item__subtitle">{{data.name}}</span>
+                </ons-col>
+            </ons-row>
             </ons-list-item>
         </ons-list>
 
