--- a/www/page2.html
+++ b/www/page2.html
@@ -7,21 +7,19 @@
 <div style="text-align: center">
 
         <ons-list>
-            <ons-list-item class="item" ng-repeat="data in dataList" ng-click="showDetailPage(data)">
+            <ons-list-item class="item" ng-repeat="data in dataList | orderBy:'-rankW_count' | limitTo:30 " ng-click="showDetailPage(data)">
             <ons-row class="relative">
                 <ons-col width="25px">
-                    <div>
+                    <div >
                         <img ng-if="$index == 0" src="img/1.jpg" width="24px"/>
                         <img ng-if="$index == 1" src="img/2.jpg" width="24px"/>
                         <img ng-if="$index == 2" src="img/3.jpg" width="24px"/>
-                        <img ng-if="$index == 2" src="img/new.jpg" class="absolute"/>
-                        <img ng-if="$index == 3" src="img/new.jpg" class="absolute"/>
-                        <div ng-switch = "data.d_id">
-                            <div ng-switch-when="6w2UxDdhZPk">
-                                
-                            </div>
+                    </div>
+                    <div ng-switch = "data.new">
+                        <div ng-switch-when="1">
+                            <img src="img/new.jpg" class="absolute"/>
                         </div>
-                </div>
+                    </div>
                 </ons-col>
                 <ons-col width="80px">
                     <div class="item__thum">
