--- a/www/home_main.html
+++ b/www/home_main.html
@@ -5,7 +5,8 @@
 
 <ons-template id="page1.html">
   <ons-page>
-    <ons-toolbar style="height: 50px;">
+    <!-- <ons-toolbar style="height: 50px;">--> 
+    <ons-toolbar class="navigation-bar--title">
     <!-- style="height: 110px;" fixed-style <ons-toolbar class="title">--> 
       <div class="left">
         <ons-toolbar-button ng-click="menu.toggleMenu()">
