--- a/www/page2.html
+++ b/www/page2.html
@@ -1,6 +1,6 @@
 <ons-page  ng-controller="WRankController">
 
-<ons-toolbar>
+<ons-toolbar class="navigation-bar--title">
     <div class="center">週間ランキング</div>
 </ons-toolbar>
 
