--- a/www/page4.html
+++ b/www/page4.html
@@ -1,6 +1,6 @@
 <ons-page  ng-controller="MRankController">
 
-<ons-toolbar>
+<ons-toolbar class="navigation-bar--title">
     <div class="center">月間ランキング</div>
 </ons-toolbar>
 <div style="text-align: center">
