--- a/www/home_menu.html
+++ b/www/home_menu.html
@@ -1,11 +1,11 @@
 <ons-page ng-controller="MenuCatController">
 
   <ons-list>
-    <ons-list-item>
+    <ons-list-item  class="item_cat_menu">
       カテゴリ選択
     </ons-list-item>
 
-    <ons-list-item class="item" ng-repeat="data in dataList" modifier="chevron" ng-click="SetCat(data);menu.setMainPage('page1.html', {closeMenu: true});'home_main.html';">
+    <ons-list-item class="item_cat" ng-repeat="data in dataList" modifier="chevron" ng-click="SetCat(data);menu.setMainPage('page1.html', {closeMenu: true});'home_main.html';">
         <span class="list__item__subtitle">{{data.cat_name}}</span>
     </ons-list-item>
 
