--- a/www/home_main.html
+++ b/www/home_main.html
@@ -9,8 +9,8 @@
     <ons-toolbar class="navigation-bar--title">
     <!-- style="height: 110px;" fixed-style <ons-toolbar class="title">--> 
       <div class="left">
-        <ons-toolbar-button ng-click="menu.toggleMenu()">
-          <ons-icon icon="ion-navicon" style="font-size: 32px; width: 1em;"></ons-icon>
+        <ons-toolbar-button ng-click="menu.toggleMenu()" >
+          <ons-icon icon="ion-navicon" style="font-size: 32px; width: 1em; color:white;"></ons-icon>
         </ons-toolbar-button>
       </div>
           <div class="center">{{catdata.cat_name}}</div>
